package NYT.NCypressServer.NProto;

import "yt_proto/yt/core/misc/proto/guid.proto";

////////////////////////////////////////////////////////////////////////////////

message TReqCreateNode
{
    message TChild {
        required string key = 1;
        required NYT.NProto.TGuid id = 2;
    }

    required int32 type = 1;
    required NYT.NProto.TGuid node_id = 2;
    required string path = 3;
    repeated TChild children = 4;
}

////////////////////////////////////////////////////////////////////////////////

message TReqAttachChild
{
    required NYT.NProto.TGuid parent_id = 1;
    required NYT.NProto.TGuid child_id = 2;
    required string key = 3;
}

////////////////////////////////////////////////////////////////////////////////

message TReqRemoveNode
{
    required NYT.NProto.TGuid node_id = 1;
}

////////////////////////////////////////////////////////////////////////////////

message TReqDetachChild
{
    required NYT.NProto.TGuid parent_id = 1;
    required string key = 2;
}

////////////////////////////////////////////////////////////////////////////////
